--- a/environment.yml
+++ b/environment.yml
@@ -3,4 +3,8 @@ channels:
   - conda-forge
   - astra-toolbox
 dependencies:
-  - python==2.7
+  - python=2.7
+  - numpy
+  - scipy
+  - astra-toolbox=1.7.1
+  - matplotlib
